# sprockets

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
.github/buildomat/jobs/: build-and-test.sh
.github/workflows/: rust.yml
common/: Cargo.toml
common/src/: certificates.rs  lib.rs  measurements.rs  msgs.rs
host/: Cargo.toml
host/fuzz/: Cargo.toml  README.mkdn
host/fuzz/fuzz_targets/: session-async-readwrite.rs
host/src/: length_prefixed.rs  lib.rs  rot_manager.rs  session.rs  uart.rs
host/src/session/: aead_read_buf.rs  aead_write_buf.rs  decrypting_buf_reader.rs  encrypting_buf_writer.rs
hyper-sprockets/: Cargo.toml
hyper-sprockets/examples/: hyper-client.rs  hyper-server.rs
hyper-sprockets/examples/common/: mod.rs
hyper-sprockets/src/: client.rs  lib.rs  server.rs
ipcc/src/: lib.rs
proxy/: Cargo.toml
proxy/examples/: sprocksy.rs
proxy/src/: lib.rs
rot/: Cargo.toml
rot/src/: certificates.rs  endorsements.rs  keys.rs  lib.rs  measurements.rs  msgs.rs  rot.rs
session/: Cargo.toml  README.adoc
session/src/: client.rs  error.rs  handshake_state.rs  lib.rs  msgs.rs  rot.rs  rot_manager.rs  server.rs  session.rs
session/tests/: integration_tests.rs
src/: endorsements.rs  keys.rs  lib.rs  measurements.rs  msgs.rs  rot.rs
tls/: Cargo.toml  build.rs
tls/examples/: client.rs  client_measure.rs  client_quic.rs  server.rs  server_measure.rs  server_quic.rs
tls/src/: attest.rs  client.rs  config.rs  ipcc.rs  keys.rs  lib.rs  measurements.rs  quic.rs  server.rs
tls/src/quic/: stream.rs  tests.rs
tls/test-keys/: config.kdl  corim-rot.kdl  corim-sp.kdl  log.kdl  oks-signer.cert.pem  test-deviceid-1.cert.pem  test-deviceid-1.key.pem  test-deviceid-2.cert.pem  test-deviceid-2.key.pem  test-platformid-1.cert.pem  test-platformid-1.key.pem  test-platformid-2.cert.pem  test-platformid-2.key.pem  test-root-a.cert.pem  test-root-a.key.pem  test-signer-a1.cert.pem  test-signer-a1.key.pem  test-signer-a2.cert.pem  test-signer-a2.key.pem  test-sprockets-auth-1.cert.pem  test-sprockets-auth-1.key.pem  test-sprockets-auth-2.cert.pem  test-sprockets-auth-2.key.pem
tls/test-keys/a/: alias.cert.pem  deviceid.cert.pem  persistentid.cert.pem  persistentid.csr.pem  root.cert.pem  spmeasure.cert.pem  trust-quorum-dhe.cert.pem
tls/test-keys/b/: alias.key.pem  deviceid-eca.key.pem  persistentid-ca.key.pem  root-ca.key.pem  sp-measure.key.pem  trust-quorum-dhe.key.pem
tls/test-keys/sled1/: deviceid.cert.pem  deviceid.key.pem  oks-signer.cert.pem  platformid.cert.pem  platformid.key.pem
tls/test-keys/sled2/: oks-signer.key.pem  platformid.key.pem  sprockets-auth.cert.pem
tls/test-utils/: Cargo.toml
tls/test-utils/src/: lib.rs
tls/tests/: quic_examples.rs
xtask/: Cargo.toml
xtask/src/: main.rs
