[workspace]
members = [
    "tls",
    "tls/test-utils",
    "xtask",
]

default-members = [
    "tls",
    "tls/test-utils"
]
resolver = "2"
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[workspace.dependencies]
anyhow = { version = "1", default-features = false }
camino = { version = "1.1.7", default-features = false, features = ["serde1"] }
attest-data = { git = "https://github.com/oxidecomputer/dice-util", rev = "4b408edc1d00f108ddf635415d783e6f12fe9641" }
clap = { version = "4", default-features = false, features = ["std", "derive", "default", "wrap_help"] }
ciborium = "0.2.2"
cfg-if = "1.0"
dice-mfg-msgs = { git = "https://github.com/oxidecomputer/dice-util", rev = "4b408edc1d00f108ddf635415d783e6f12fe9641" }
dice-verifier = { git = "https://github.com/oxidecomputer/dice-util", rev = "4b408edc1d00f108ddf635415d783e6f12fe9641" }
ed25519-dalek = { version = "2.1", default-features = false, features = ["digest", "pkcs8"] }
libipcc = { git = "https://github.com/oxidecomputer/ipcc-rs", rev = "524eb8f125003dff50b9703900c6b323f00f9e1b" }
pem-rfc7468 = { version = "0.7.0"}
pki-playground = { path = "../pki-playground" }
rustls = { version = "0.23.10", default-features = false, features = ["std", "ring", "logging"] }
secrecy = "0.8.0"
serde = { version = "1", default-features = false }
sha2 = "0.10"
sha3 = "0.10"
slog = "2.7.0"
slog-async = "2.1"
slog-term = "2.9.1"
thiserror = "1.0.57"
tokio = {version = "1.38.0", features = ["net", "macros", "rt-multi-thread", "io-util", "sync", "time", "io-std"]}
tokio-rustls = { version = "0.26.0", default-features = false, features = ["ring", "logging"] }
toml = "0.8.19"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
x509-cert = { version = "0.2.5" }
zeroize = { version = "1.8.1", features = ["zeroize_derive"] }
