[workspace]
members = [
    "tls",
    "tls/test-utils",
    "xtask",
]

default-members = [
    "tls",
    "tls/test-utils"
]
resolver = "2"
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[workspace.dependencies]
anyhow = { version = "1.0.103", default-features = false }
camino = { version = "1.2.4", default-features = false, features = ["serde1"] }
attest-data = { git = "https://github.com/oxidecomputer/dice-util", rev = "d7472bfa91aee859c3fe0bdc1dbb1e320285228e" }
clap = { version = "4.6.1", default-features = false, features = ["std", "derive", "default", "wrap_help"] }
ciborium = "0.2.2"
cfg-if = "1.0.4"
dice-mfg-msgs = { git = "https://github.com/oxidecomputer/dice-util", rev = "d7472bfa91aee859c3fe0bdc1dbb1e320285228e" }
dice-verifier = { git = "https://github.com/oxidecomputer/dice-util", rev = "d7472bfa91aee859c3fe0bdc1dbb1e320285228e" }
ed25519-dalek = { version = "2.2.0", default-features = false, features = ["digest", "pkcs8"] }
libipcc = { git = "https://github.com/oxidecomputer/ipcc-rs", rev = "524eb8f125003dff50b9703900c6b323f00f9e1b" }
pem-rfc7468 = { version = "0.7.0"}
pki-playground = { git = "https://github.com/oxidecomputer/pki-playground", rev = "bcd3bf2dfe36468c494eac17463a4e10be366b35" }
rustls = { version = "0.23.41", default-features = false, features = ["std", "aws_lc_rs", "logging"] }
secrecy = "0.8.0"
serde = { version = "1.0.228", default-features = false }
sha2 = "0.10.9"
sha3 = "0.10.9"
slog = "2.8.2"
slog-async = "2.8.0"
slog-error-chain = { git = "https://github.com/oxidecomputer/slog-error-chain", branch = "main", features = ["derive"] }
slog-term = "2.9.2"
thiserror = "2.0.18"
tokio = {version = "1.52.3", features = ["net", "macros", "rt-multi-thread", "io-util", "sync", "time", "io-std"]}
tokio-rustls = { version = "0.26.4", default-features = false, features = ["aws_lc_rs", "logging"] }
toml = "1.1.2+spec-1.1.0"
x509-cert = { version = "0.2.5" }
zeroize = { version = "1.9.0", features = ["zeroize_derive"] }
