[package]
name = "sprockets-common"
version = "0.1.1"
edition = "2021"

[dependencies]
derive_more = "0.99.17"
hubpack = "0.1"
serde = { version = "1.0.136", default-features = false, features = ["derive"]  }
serde-big-array = { version = "0.5.1" }
rand = { version = "0.8.5", optional = true }
salty = { workspace = true, optional = true }

[dev-dependencies]
ed25519 = { version = "1.5.2" }
ed25519-dalek = { version = "1.0.1", features = ["u64_backend"]}
salty.workspace = true
rand = "0.8.5"

[features]
# Remove this when we no longer need to create artificial keys for testing on the RoT
default = ["salty"]
