[package]
name = "sprockets-host"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
pin-project = "1.0"
sprockets-common = { path = "../common", features = ["rand"]}
sprockets-session = { path = "../session" }
ring = "0.16.20"
hubpack = { version = "0.1", optional = true }
derive_more = "0.99.17"
serde = { version = "1.0.136", features = ["derive"]  }
serialport = { git = "https://github.com/jgallagher/serialport-rs", branch = "illumos-support", optional = true }
clap = { version = "4", features = ["derive"] }
corncobs = { version = "0.1.1", features = ["std"], optional = true }
thiserror = "1.0.30"
anyhow = "1.0.56"
tokio = { version = "1.18.1", features = ["io-util", "sync", "rt", "macros"] }
slog = "2.7.0"

[features]
uart = ["serialport", "corncobs", "hubpack"]

[dev-dependencies]
# Salty is used by the RoT for Ed25519 signatures
salty = { git = "https://github.com/oxidecomputer/salty", branch = "v0.2.0-zeroize" }
sprockets-rot = { path = "../rot" }
slog-term = "2.9.0"
slog-async = "2.7.0"
tokio = { version = "1.18.1", features = ["io-util", "sync", "rt", "macros", "time"] }

[[bin]]
name = "sprockets-cli"

