[package]
name = "hyper-sprockets"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
hyper = { version = "0.14" }
sprockets-common = { path = "../common" }
sprockets-host = { path = "../host" }
thiserror = "1"
tokio = "1.18"

[features]
default = ["full"]
full = ["server", "client"]
server = ["hyper/server"]
client = ["hyper/client"]

[dev-dependencies]
hyper = { version = "0.14", features = ["full"] }
salty = { git = "https://github.com/oxidecomputer/salty", branch = "v0.2.0-zeroize" }
slog = "2.7.0"
slog-term = "2.9.0"
slog-async = "2.7.0"
sprockets-rot = { path = "../rot" }
tokio = { version = "1.18", features = ["full"] }
