[package]
name = "sprockets-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.136", default-features = false, features = ["derive"] }
slog = "2.7.0"
sprockets-host = { path = "../host" }
thiserror = "1.0.30"
tokio = { version = "1.18.1", features = ["io-util", "net"] }

[dev-dependencies]
clap = "4"
salty = { git = "https://github.com/oxidecomputer/salty", branch = "v0.2.0-zeroize" }
slog = "2.7.0"
slog-term = "2.9.0"
slog-async = "2.7.0"
sprockets-common = { path = "../common" }
sprockets-rot = { path = "../rot" }
tokio = { version = "1.18", features = ["full"] }
