[package]
name = "sprockets-rot"
version = "0.1.0"
edition = "2021"

[dependencies]
sprockets-common = { path = "../common" }
corncobs = "0.1.1"
hubpack = { rev = "df08cc3a6e1f97381cd0472ae348e310f0119e25", git = "https://github.com/cbiffle/hubpack.git"}
tinyvec = { version = "1.5.1" }
derive_more = "0.99.17"
serde = { version = "1.0.136", default-features = false, features = ["derive"]  }
salty = { version = "0.2.0" }
rand = { version = "0.8.5", optional = true }

[features]
default = ["rand"]
