[package]
name = "sprockets-rot"
version = "0.1.1"
edition = "2021"

[dependencies]
sprockets-common = { path = "../common" }
corncobs = "0.1.1"
hubpack = "0.1"
tinyvec = { version = "1.5.1" }
derive_more = "0.99.17"
serde = { version = "1.0.136", default-features = false, features = ["derive"]  }
salty.workspace = true
rand = { version = "0.8.5", optional = true }

[features]
default = ["rand"]
