[package]
name = "sprockets-tls"
version = "0.1.0"
edition = "2021"

[dependencies]
clap.workspace = true
attest-data.workspace = true
camino.workspace = true
cfg-if.workspace = true
dice-mfg-msgs = { workspace = true, features = ["std"] }
dice-verifier = { workspace = true, features = ["ipcc", "mock"] }
libipcc.workspace = true
ed25519-dalek.workspace = true
hubpack = "0.1.2"
pem-rfc7468 = { workspace = true, features = ["std"] }
rustls.workspace = true
serde.workspace = true
secrecy.workspace = true
sha2.workspace = true
sha3.workspace = true
slog.workspace = true
slog-async.workspace = true
slog-term.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
toml.workspace = true
x509-cert.workspace = true
zeroize.workspace = true

[build-dependencies]
anyhow.workspace = true

[features]
unittest = []

[dev-dependencies]
sprockets-tls = { path = ".", features = ["unittest"] }
